crates/snapshot-tests/tests/snapshots/parser__signed_radix__plus_bin.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidInteger]: invalid integer: signs are not allowed on prefixed integers at `a`
  ┌─ plus_bin:1:5
  │
1 │ a = +0b0
  │     ^^^^ invalid integer: signs are not allowed on prefixed integers


error: invalid integer: signs are not allowed on prefixed integers at `a`
 --> plus_bin:1:5
  |
1 | a = +0b0
  |     ^^^^ invalid integer: signs are not allowed on prefixed integers
Error {
    kind: "InvalidInteger",
    message: "invalid integer: signs are not allowed on prefixed integers",
    span: 4..8,
    path: Some(
        "a",
    ),
}
