crates/snapshot-tests/tests/snapshots/parser__signed_radix__plus_hex.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidInteger]: invalid integer: signs are not allowed on prefixed integers at `a`
  ┌─ plus_hex:1:5
  │
1 │ a = +0x0
  │     ^^^^ invalid integer: signs are not allowed on prefixed integers


error: invalid integer: signs are not allowed on prefixed integers at `a`
 --> plus_hex:1:5
  |
1 | a = +0x0
  |     ^^^^ invalid integer: signs are not allowed on prefixed integers
Error {
    kind: "InvalidInteger",
    message: "invalid integer: signs are not allowed on prefixed integers",
    span: 4..8,
    path: Some(
        "a",
    ),
}
